--- a/src/build.xml
+++ b/src/build.xml
@@ -2,8 +2,8 @@
 <project default = "compile">
 <property name="java" location="./src/Mypackage"></property>
 <property name="result" location="./target"></property>
-<property name="javaclasses" location="${result.dir}/classes"></property>
-<property name="testclasses" location="${result.dir}/testclasses"></property>
+<property name="javaclasses" location="${result}/classes"></property>
+<property name="testclasses" location="${result}/testclasses"></property>
 <property name="jar" location="./MyProduct.jar"></property>
 
 <target name = "compile">
