--- a/src/build.xml
+++ b/src/build.xml
@@ -6,6 +6,12 @@
 <property name="javaclasses" location="${result}/classes"></property>
 <property name="testclasses" location="${result}/testclasses"></property>
 <property name="jar" location="./MyProduct.jar"></property>
+<path id="NecessaryLibraries">
+        <pathelement location="./src/UsedLibraries/junit-4.12.jar"/>
+        <!--matcher-->
+        <pathelement location="./src/UsedLibraries/hamcrest-core-1.3.jar"/>
+        <!--<pathelement location="./UsedLibraries/jacocoant.jar"/>-->
+    </path>
 
 <target name = "compile">
 <mkdir dir = "${javaclasses}" />
@@ -17,4 +23,35 @@
 </fileset>
 </jar>
 </target>
+
+ <target name="compile-testcases" depends="compile">
+        <mkdir dir="${result.testclasses.dir}"/>
+        <javac srcdir="${test}"  destdir="${testclasses}" debug="true" includeantruntime="false">
+            <classpath>
+                
+                <path refid="NecessaryLibraries"/>
+                <pathelement location="${javaclasses}"/>
+            </classpath>
+        </javac>        
+    </target>
+    
+    <target name="test" depends="compile-testcases">
+        <!--fork : each test will run in its own JVM (to seperate test cases)-->
+        <junit printsummary="true" haltonfailure="true" fork="true">
+            <classpath>
+                <path refid="NecessaryLibraries"></path>
+                <pathelement location="${javaclasses}"/>
+                <pathelement location="${testclasses}"/>
+            </classpath>
+            <formatter type="brief" usefile="false"/>
+            <batchtest >
+                <fileset dir="${testclasses}" >
+                     <include name="**/*Test.class"/>
+                </fileset>
+            </batchtest>
+            
+        </junit>
+    </target>
 </project>
+
+
