--- a/src/build.xml
+++ b/src/build.xml
@@ -6,17 +6,13 @@
 <property name="javaclasses" location="${result}/classes"></property>
 <property name="testclasses" location="${result}/testclasses"></property>
 <property name="jar" location="./MyProduct.jar"></property>
-<path id="NecessaryLibraries">
-        <pathelement location="./src/UsedLibraries/junit-4.12.jar"/>
-        <!--matcher-->
-        <pathelement location="./src/UsedLibraries/hamcrest-core-1.3.jar"/>
-        <!--<pathelement location="./UsedLibraries/jacocoant.jar"/>-->
-    </path>
+
 
 <target name = "compile">
 <mkdir dir = "${javaclasses}" />
 <javac srcdir = "${java}" destdir = "${javaclasses}" debug = "true" includeantruntime = "false"></javac>
 </target>
+
 <target name = "jar" depends = "compile">
 <jar desfile ="${jar}">
 <fileset dir = "${javaclasses}">
@@ -24,8 +20,15 @@
 </jar>
 </target>
 
+<path id="NecessaryLibraries">
+        <pathelement location="./src/UsedLibraries/junit-4.12.jar"/>
+        <!--matcher-->
+        <pathelement location="./src/UsedLibraries/hamcrest-core-1.3.jar"/>
+        <!--<pathelement location="./UsedLibraries/jacocoant.jar"/>-->
+    </path>
+    
  <target name="compile-testcases" depends="compile">
-        <mkdir dir="${result.testclasses.dir}"/>
+        <mkdir dir="${testclasses}"/>
         <javac srcdir="${test}"  destdir="${testclasses}" debug="true" includeantruntime="false">
             <classpath>
                 
